# emotime

src/: CMakeLists.txt
src/detector/: EmoDetector.cpp  FacePreProcessor.cpp
src/training/: CMakeLists.txt
